# xerces-with-icu4c-cmake-build

./: CMakeLists.txt  CMakeLists.txt~  Makefile  Makefile~  root_res.c  xercesc_messages.c
xercesc/dom/.deps/: DOMException.Plo  DOMLSException.Plo  DOMRangeException.Plo  DOMXPathException.Plo
xercesc/dom/impl/.deps/: DOMAttrImpl.Plo  DOMAttrMapImpl.Plo  DOMAttrNSImpl.Plo  DOMCDATASectionImpl.Plo  DOMCharacterDataImpl.Plo  DOMChildNode.Plo  DOMCommentImpl.Plo  DOMConfigurationImpl.Plo  DOMDeepNodeListImpl.Plo  DOMDocumentFragmentImpl.Plo  DOMDocumentImpl.Plo  DOMDocumentTypeImpl.Plo  DOMElementImpl.Plo  DOMElementNSImpl.Plo  DOMEntityImpl.Plo  DOMEntityReferenceImpl.Plo  DOMErrorImpl.Plo  DOMImplementationImpl.Plo  DOMImplementationListImpl.Plo  DOMImplementationRegistry.Plo  (+24 more)
xercesc/framework/.deps/: BinOutputStream.Plo  LocalFileFormatTarget.Plo  LocalFileInputSource.Plo  MemBufFormatTarget.Plo  MemBufInputSource.Plo  StdInInputSource.Plo  StdOutFormatTarget.Plo  URLInputSource.Plo  Wrapper4DOMLSInput.Plo  Wrapper4InputSource.Plo  XMLAttDef.Plo  XMLAttDefList.Plo  XMLAttr.Plo  XMLBuffer.Plo  XMLBufferMgr.Plo  XMLContentModel.Plo  XMLDTDDescription.Plo  XMLElementDecl.Plo  XMLEntityDecl.Plo  XMLFormatter.Plo  XMLGrammarDescription.Plo  XMLGrammarPoolImpl.Plo  XMLNotationDecl.Plo  XMLRecognizer.Plo  XMLRefInfo.Plo  XMLSchemaDescription.Plo  XMLValidator.Plo
xercesc/internal/.deps/: BinFileOutputStream.Plo  BinMemOutputStream.Plo  DGXMLScanner.Plo  ElemStack.Plo  IGXMLScanner.Plo  IGXMLScanner2.Plo  MemoryManagerImpl.Plo  ReaderMgr.Plo  SGXMLScanner.Plo  ValidationContextImpl.Plo  VecAttrListImpl.Plo  VecAttributesImpl.Plo  WFXMLScanner.Plo  XMLReader.Plo  XMLScanner.Plo  XMLScannerResolver.Plo  XProtoType.Plo  XSAXMLScanner.Plo  XSObjectFactory.Plo  XSerializeEngine.Plo  XTemplateSerializer.Plo
xercesc/parsers/.deps/: AbstractDOMParser.Plo  DOMLSParserImpl.Plo  SAX2XMLFilterImpl.Plo  SAX2XMLReaderImpl.Plo  SAXParser.Plo  XercesDOMParser.Plo
xercesc/sax/.deps/: Dummy.Plo  InputSource.Plo  SAXException.Plo  SAXParseException.Plo
xercesc/sax2/.deps/: sax2Dummy.Plo
xercesc/util/: PlatformUtils.cpp  PlatformUtils.cpp~
xercesc/util/.deps/: Base64.Plo  BinFileInputStream.Plo  BinInputStream.Plo  BinMemInputStream.Plo  BitSet.Plo  DefaultPanicHandler.Plo  EncodingValidator.Plo  HeaderDummy.Plo  HexBin.Plo  KVStringPair.Plo  Mutexes.Plo  PSVIUni.Plo  PanicHandler.Plo  PlatformUtils.Plo  QName.Plo  StringPool.Plo  SynchronizedStringPool.Plo  TransService.Plo  XML256TableTranscoder.Plo  XML88591Transcoder.Plo  XMLASCIITranscoder.Plo  XMLAbstractDoubleFloat.Plo  XMLBigDecimal.Plo  XMLBigInteger.Plo  XMLChTranscoder.Plo  XMLChar.Plo  XMLDateTime.Tpo  XMLDouble.Plo  XMLEBCDICTranscoder.Plo  XMLException.Plo  XMLFloat.Plo  XMLIBM1047Transcoder.Plo  XMLIBM1140Transcoder.Plo  XMLInitializer.Plo  XMLMsgLoader.Plo  XMLNumber.Plo  XMLString.Plo  XMLStringTokenizer.Plo  XMLUCS4Transcoder.Plo  XMLURL.Plo  (+6 more)
xercesc/xinclude/.deps/: XIncludeDOMDocumentProcessor.Plo  XIncludeLocation.Plo  XIncludeUtils.Plo
(+144 files in other folders)
